# sprout

./: .dockerignore  Dockerfile  README.md  main.py  pyproject.toml
app/src/agents/: base.py  cv_parser.py  market_intel.py  report.py  skill_analyst.py
app/src/core/: config.py
app/src/orchestration/: pipeline.py
app/src/router/: __init__.py  api.py
app/src/router/agent/: api.py
app/src/router/orchestration/: api.py
app/src/schemas/: cv_parser.py  market_intel.py  report.py  skill_analyst.py
app/src/utils/: extractor.py
templates/: index.html
tests/: test_cv_parser.py  test_market_intel.py  test_pipline.py  test_report.py  test_skill_analyst.py
tests/data/: john_doe_cv.docx  john_doe_cv.txt
